--- a/homeloan1.yaml
+++ b/homeloan1.yaml
@@ -1,9 +1,11 @@
+title: Home Loan Quick Start 1
 github_repo_url: https://github.com/weimeilin79/homeloan-part1 
 technologies: 
-  - Fabric8
-  - ActiveMQ
-  - Camel
-  - REST
+	-File Endpoint 
+	-Content Base Routing 
+	-JAXB transformation
+	-Set up the activemq for messaging broker. 	
+summary:  Visit http://wei-meilin.blogspot.tw/2014/07/red-hat-jboss-fuse-getting-started-home.html
 level: Beginner
 product: fuse
 author: Christina Lin
