--- a/pom.xml
+++ b/pom.xml
@@ -111,17 +111,17 @@
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-client</artifactId>
-      <version>5.9.0</version>
+      <version>5.9.0.redhat-610379</version>
     </dependency>
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-camel</artifactId>
-      <version>5.9.0</version>
+      <version>5.9.0.redhat-610379</version>
     </dependency>
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-pool</artifactId>
-      <version>5.9.0</version>
+      <version>5.9.0.redhat-610379</version>
     </dependency>
     
     
@@ -129,17 +129,17 @@
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-broker</artifactId>
-      <version>5.9.0</version>
+      <version>5.9.0.redhat-610379</version>
     </dependency>
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-spring</artifactId>
-      <version>5.9.0</version>
+      <version>5.9.0.redhat-610379</version>
     </dependency>
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-kahadb-store</artifactId>
-      <version>5.9.0</version>
+      <version>5.9.0.redhat-610379</version>
     </dependency>
     <dependency>
       <groupId>org.apache.xbean</groupId>
